# ak68-788-gw

./: .gitignore  CROSS_COMPILE.md  Cargo.toml  Makefile  README.md  README_OPENWRT.md  build.sh  cpetools.sh  install-openwrt.sh
.github/workflows/: cross-compile-deploy.yml  cross-compile.yml
openwrt/init.d/: websocket-at-gateway
openwrt/scripts/: make-ipk.sh
src/: main.rs
